fixed spacing issue

--- a/styles/Game.module.css
+++ b/styles/Game.module.css
@@ -93,6 +93,7 @@
   .nameListGrey {
       color: lightgrey;
       width: fit-content;
+      margin-bottom: 15px;
   }
 
   .nameListBlack {
